README.md update

--- a/ExcelR.DotNetCore/ExcelR.DotNetCore.csproj
+++ b/ExcelR.DotNetCore/ExcelR.DotNetCore.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <Description>Simple dotnet core library contains  to create/read xlsx/csv files in an easy way.</Description>
+    <Authors>Jitender Kundu</Authors>
+    <Company>ExcelR</Company>
   </PropertyGroup>
 
   <ItemGroup>
